# Prediccion-de-ascensos-y-descensos-en-LaLiga-Hypermotion

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
config/: config.yaml  data.yaml
data/raw/footballdata/: SP2_2011-12.csv  SP2_2012-13.csv  SP2_2013-14.csv  SP2_2024-25.csv  SP2_2025-26.csv
data/raw/transfermarkt/standings/: 2010_J38.csv  2010_J42.csv  2011_J38.csv  2011_J42.csv  2012_J38.csv  2012_J42.csv  2013_J38.csv  2013_J42.csv  2014_J38.csv  2014_J42.csv  2015_J38.csv  2015_J42.csv  2016_J38.csv  2016_J42.csv  2017_J38.csv  2017_J42.csv  2018_J38.csv  2018_J42.csv  2019_J38.csv  2019_J42.csv  2020_J38.csv  2020_J42.csv  2021_J38.csv  2021_J42.csv  2022_J38.csv  2022_J42.csv  2023_J38.csv  2023_J42.csv  2024_J38.csv  2024_J42.csv
notebooks/: 00_eda.ipynb  01_feature_engineering.ipynb  02_double_poisson.ipynb  03_logistic_regression.ipynb  04_random_forest.ipynb  05_xgboost.ipynb  06_lightgbm.ipynb  07_mlp.ipynb  08_experimentos.ipynb  figura_6_2_matrices_confusion.py  montecarlo_simulation.py  shap_explicabilidad.py
src/tfm_segunda/: __init__.py  config.py  economics.py  evaluate_models.py  metrics.py  predictions.py
src/tfm_segunda/data/: __init__.py  load_footballdata.py  load_transfermarkt.py  splits.py  team_normalization.py
src/tfm_segunda/features/: __init__.py  jornadas.py
