[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm-segunda"
version = "0.1.0"
description = "Predicción de partidos de LaLiga Hypermotion (Segunda División) — TFM Pedro Sarmiento"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Pedro Sarmiento", email = "pedrosarmientoyanez@gmail.com" }]
keywords = ["football", "prediction", "machine-learning", "tfm", "segunda-division", "laliga"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencias core. Los notebooks (0X_*.ipynb) son el flujo principal del TFM:
# cargan datos vía tfm_segunda.data y construyen modelos in-line.
dependencies = [
  # Datos y E/S
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "pandera[pandas]>=0.20",
  # Scraping (data ingestion CLI)
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "html5lib>=1.1",
  "tenacity>=8.2",
  # Modelado estadístico clásico (Poisson + logística)
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "scipy>=1.12",
  # Persistencia de modelos entrenados en notebooks
  "joblib>=1.3",
  # Visualización (EDA + comparativas)
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "Pillow>=10.2",
  # CLI y logging
  "typer>=0.12",
  "rich>=13.7",
  "loguru>=0.7",
]

[project.optional-dependencies]
# Modelos ML avanzados (notebooks 05-06)
ml = [
  "xgboost>=2.0",
  "lightgbm>=4.3",
]

# Red neuronal PyTorch (notebook 08, opcional)
nn = [
  "torch>=2.2",
]

# App web Streamlit + visualización interactiva para Azure Container Apps
app = [
  "streamlit>=1.32",
  "plotly>=5.20",
  "altair>=5.2",
]

# Entorno de desarrollo: JupyterLab + ruff
dev = [
  "ipykernel>=6.29",
  "jupyterlab>=4.1",
  "ipywidgets>=8.1",
  "nbformat>=5.10",
  "ruff>=0.4",
]

# Atajo para instalar todo
all = [
  "tfm-segunda[ml,app,dev]",
]

[project.urls]
Repository = "https://github.com/Pedro-Sarmiento/LaLigaHypermotion_Predictor"

# -----------------------------------------------------------------------------
# Setuptools — descubrir el paquete dentro de src/
# -----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["tfm_segunda*"]

# -----------------------------------------------------------------------------
# Ruff: lint + format del código de src/ y notebooks (excluyendo datos)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "data", "models", "reports", "ARCHIVE"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "N",        # pep8-naming
  "C4",       # comprehensions
  "SIM",      # simplify
  "PD",       # pandas-vet
  "NPY",      # numpy-specific
  "RUF",      # ruff-specific
]
ignore = [
  "E501",    # line too long — formatter ya lo gestiona
  "PD901",   # df como nombre — habitual en EDA
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["E402", "F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
